trunk/Archive2/2f/b53bf24c182780/output
main.cpp:94:15: error: incomplete type 'function_traits<int Class::*>' used in nested name specifier
 static_assert(function_traits<int (Class::*)>::is_member_function , "");
               ^
